--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:h2:mem:studentDB
 spring.h2.console.enabled=true
 server.port=8081
+# email configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nabil@mail.com
+spring.mail.password=nabil@mail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
